# inferdocs

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  documents.py  errors.py  health.py  schemas.py
app/core/: __init__.py  config.py  logging.py
app/llm/: __init__.py  base.py  factory.py  mock_client.py  ollama_client.py  vllm_client.py
app/services/documents/: __init__.py  history.py  ingest.py  language.py  qa.py  similarity.py  storage.py  summarize.py
scripts/: run_linux.sh  run_windows.ps1
tests/: __init__.py  conftest.py  test_conversation_history.py  test_delete_stats.py  test_documents.py  test_health.py  test_multi_document.py  test_qa_mock.py  test_similar.py  test_streaming.py  test_summarize_mock.py  test_tags_and_language.py
tests/integration/: __init__.py  test_summarize_ollama.py
tests/unit/: __init__.py  test_document_ingestor.py  test_language.py  test_llm_clients.py  test_qa.py  test_storage.py  test_summarizer.py
web/: playground.css  playground.html  playground.js
